<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ReadingsActivity"
    android:background="@drawable/backgroundmin">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title_pedometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:text="Pedometer"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:indeterminate="true"
                android:visibility="invisible" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/pedometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_steps"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="monospace"
                    android:text="Total Steps: 500"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/rangeSet"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="46dp"
                    android:text="Set Range"
                    android:textSize="24sp"
                    />

                <TextView
                    android:id="@+id/text_high"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:text="Notify at"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/threshold"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/updateRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:text="Update Range"
                    />

                <Button
                    android:id="@+id/btnStepReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:onClick="reset"
                    android:text="Reset Steps"
                    />

                <Button
                    android:id="@+id/btnReturnToMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Return to Main"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout >