...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      
        <ImageButton
            android:id="@+id/btnHeartRate"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textpedometer"
            android:layout_marginTop="23dp"
            android:background="@color/transparent"
...
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" />

        <ImageButton
            android:id="@+id/btnPedometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:scaleType="fitStart"
            android:src="@drawable/pedometer"
            android:layout_below="@+id/hexlogo"
...
